--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Rami Parsa Sujude",
   "dependencies": {
+    "@fontsource/karla": "^4.1.0",
     "gatsby": "^2.24.47",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-google-analytics": "^2.3.13",
