--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "Rami Parsa Sujude",
   "dependencies": {
     "@fontsource/karla": "^4.1.0",
-    "gatsby": "^2.24.47",
+    "gatsby": "^2.30.2",
+    "gatsby-cli": "^2.17.1",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-google-analytics": "^2.3.13",
     "gatsby-plugin-manifest": "^2.4.23",
@@ -29,8 +30,8 @@
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
-    "prettier": "^2.0.5",
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.1.0",
+    "prettier": "^2.0.5"
   },
   "keywords": [
     "gatsby"
